# Kuberian

./: .gitmodules
.devcontainer/searcher/: Dockerfile  devcontainer.json
.devcontainer/web/: devcontainer.json
.github/workflows/: build_docker_parser.yaml
indexer/: .gitignore  1_gen_sqlite3_db.ipynb  2_gen_embedding_db.ipynb
parser/: Makefile  go.mod  main.go  types.go
searcher/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile
searcher/.devcontainer/: Dockerfile  devcontainer.json
searcher/ci/: main.rs
searcher/src/: args.rs  main.rs
searcher/src/database/: mod.rs  models.rs  schema.rs
searcher/src/embed/: encoder.rs  mod.rs  model.rs
searcher/src/server/: handler.rs  mod.rs  types.rs
searcher/src/vector_db/: mod.rs
web/: .eslintrc.yml  package-lock.json  package.json  tailwind.config.js
web/.devcontainer/: devcontainer.json
web/public/: elastic-apm-rum.umd.min.js
web/src/: config.ts
web/src/app/: card.tsx  footer.tsx  globals.css  header.tsx  layout.tsx  page.tsx  spinner.tsx
web/src/app/docs/[id]/: goBack.tsx  page.tsx
web/src/app/q/: layout.tsx
web/src/app/q/[query]/: layout.tsx  page.tsx  searchResult.tsx
web/src/components/: card.tsx  functionCard.tsx
web/src/types/: index.tsx
