[package]
name = "kuberian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
tokenizers = { version = "0.13.3", default-features = true }
anyhow = { version = "1", features = ["backtrace"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
tracing = "0.1.37"
hf-hub = "0.2.0"
clap = { version = "4.2.4", features = ["derive"] }
actix-web = "4"
