[package]
name = "kuberian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle = { package = "candle-core", version = "0.1.2" }
candle-nn = { version = "0.1.2" }
tokenizers = { version = "0.13.3", default-features = true }
anyhow = { version = "1", features = ["backtrace"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
tracing = "0.1.37"
hf-hub = "0.2.0"
clap = { version = "4.2.4", features = ["derive"] }
actix-web = "4"
intel-mkl-src = { version = "0.8.1", features = [
    "mkl-static-lp64-iomp",
], optional = true }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }


[features]
default = []
mkl = ["dep:intel-mkl-src", "candle/mkl", "candle-nn/mkl"]
